weather data ingest phase 2
